# bob

./: CMakeLists.txt  bob.pc.in
include/: bob.h
src/: CMakeLists.txt  bob.c  config.c  config.h  file.h  private.h  sys.h  varint.h
test/: CMakeLists.txt  varint.c
